@@ -1,7 +1,9 @@
 DIST ccs-patch-1.8.2-20110903.tar.gz 667039 RMD160 2b6b7eac67151723644b04b8a742061283ed0037 SHA1 d0316ffaccf3f6fff951a0ef346b6944037ee01c SHA256 6311643099cd4624881a9f32e9424e21af7660d980cd7a3ef7e49c538d4ce2ec
+DIST ccs-patch-1.8.3-20110929.tar.gz 659470 RMD160 68860ef0dfd1cded925b29bc804fd2a5d909ecf6 SHA1 dc57033c8ff0a78079ccbb00edfc6382a0960344 SHA256 18c7e21317a02f4170bc22f1fff5686dddf35d6d8485aade2a608f9060d0e0da
 DIST genpatches-3.0-5.base.tar.bz2 112593 RMD160 0f0731dd5565622817c43cc15c133e02f53bf070 SHA1 89947def4e6a2ca55a73bb35fb80f04b081e8a75 SHA256 5a93e459e4e5fb1e38fc3d8a37533aaeee9e77fc00d45105d8d49584c1ae345e
 DIST genpatches-3.0-5.extras.tar.bz2 17207 RMD160 0f04fef1fe76c9b9cbe7c497faae19b015caff72 SHA1 89935647c22c0a8b98dd568e97312ca64378a263 SHA256 ec88ca4408c668a2c4d2d25c3d4a8c67fad4bb08133db91bbb929c0053305fda
 DIST hardened-patches-3.0.4-3.extras.tar.bz2 455412 RMD160 557931fc23eff054087639995bf7e5c238a802a4 SHA1 ed5746d1583292dd5e264382c175e059888f70ed SHA256 f423732651ccc316017313de45534450af6e0ad43a626c5f3ce4f918388cb246
 DIST linux-3.0.tar.bz2 76753134 RMD160 e20c9564ec0c8128e28a4c038986d4d93bbe34bb SHA1 45b64bffc860f70ab7956da4493c488010714650 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0
+EBUILD tg-sources-3.0.4-r1.ebuild 2672 RMD160 44f2ca7f0004ec49c02dc1ec989a29dcd0a6f06d SHA1 c4018fe3d70cb5654aa8850f1187c700cd3e9624 SHA256 cbda7c1c4ab539af47f6d8dfaf9dd6d13c885b8a89995b276d4fba9a018b79bd
 EBUILD tg-sources-3.0.4.ebuild 2655 RMD160 802661bcf8e5353e624832ba72d79a75ee555945 SHA1 ad6655aa5a68a25733d545f9f495ea2fd26d1a46 SHA256 efdca66c84a7b02729b6df8695731296ac0aa6cc5f600831bd4fff014848b567
 MISC ChangeLog 491 RMD160 81d7be94f5684e9107afd52036c7dc846e88b96b SHA1 9376dac1c289476a8fffc4e6d54cfbba21f829c3 SHA256 1df355320f810a76d044fb565dd58dcb012a15c819acc83a5e940cf39eb17b17
